[gd_scene load_steps=15 format=3 uid="uid://cug4vvvi5vnyo"]

[ext_resource type="Theme" uid="uid://dvt7s00aejcpi" path="res://Resources/HUD/maintheme.tres" id="1_hpkh5"]
[ext_resource type="Script" path="res://scripts/PersistentHUD.gd" id="2_8ljum"]
[ext_resource type="Texture2D" uid="uid://c1hwkrj02qfqw" path="res://Sprites/HUD/panel.png" id="3_4l44m"]
[ext_resource type="Texture2D" uid="uid://clyrfyx8ot34q" path="res://Sprites/HUD/hp.png" id="4_2puoj"]
[ext_resource type="Texture2D" uid="uid://bf3msq7x47e8j" path="res://Sprites/HUD/stam.png" id="5_lfndc"]
[ext_resource type="Texture2D" uid="uid://cw0bktp67ie6w" path="res://Sprites/HUD/str.png" id="6_jen4e"]
[ext_resource type="Texture2D" uid="uid://f4nl0nje2q4p" path="res://Sprites/HUD/end.png" id="7_s4u07"]
[ext_resource type="Texture2D" uid="uid://birupn8volstr" path="res://Sprites/HUD/exp.png" id="8_2q4hs"]
[ext_resource type="AudioStream" uid="uid://fpf7gs85tlyo" path="res://Sounds/final.wav" id="9_j3fe4"]
[ext_resource type="Texture2D" uid="uid://xju2wmdvv7iu" path="res://Sprites/HUD/bg/bgstars2.png" id="11_fn333"]
[ext_resource type="Texture2D" uid="uid://vc5bt478u1jr" path="res://Sprites/HUD/bg/bgstars3.png" id="12_f43tn"]
[ext_resource type="Texture2D" uid="uid://cwovib8ufhx1h" path="res://Sprites/HUD/bg/bgstars4.png" id="13_pl6qn"]
[ext_resource type="Texture2D" uid="uid://bvuuyxh1vl5xg" path="res://Sprites/HUD/bg/bgstars5.png" id="14_6ypxw"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_pm2c5"]
frames = 4
speed_scale = 0.2
frame_0/texture = ExtResource("11_fn333")
frame_1/texture = ExtResource("12_f43tn")
frame_1/duration = 1.0
frame_2/texture = ExtResource("13_pl6qn")
frame_2/duration = 1.0
frame_3/texture = ExtResource("14_6ypxw")
frame_3/duration = 1.0

[node name="PersistentHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_hpkh5")
script = ExtResource("2_8ljum")

[node name="InventoryBox" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = -185.0
offset_right = 1531.0
offset_bottom = 472.0
mouse_filter = 2
texture = ExtResource("3_4l44m")
stretch_mode = 4

[node name="InventoryContainer" type="VBoxContainer" parent="InventoryBox"]
layout_mode = 0
offset_left = 91.0
offset_top = 203.0
offset_right = 248.0
offset_bottom = 243.0
mouse_filter = 2

[node name="Label" type="Label" parent="InventoryBox/InventoryContainer"]
layout_mode = 2
mouse_filter = 0
text = "INVENTORY:"

[node name="StatsBox" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 788.0
offset_top = 286.0
offset_right = 1531.0
offset_bottom = 943.0
mouse_filter = 0
texture = ExtResource("3_4l44m")
stretch_mode = 4

[node name="StatContainer" type="VBoxContainer" parent="StatsBox"]
layout_mode = 0
offset_left = 175.0
offset_top = 132.0
offset_right = 299.0
offset_bottom = 347.0
mouse_filter = 0
theme_override_constants/separation = 10

[node name="HealthLabel" type="Label" parent="StatsBox/StatContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "4/5 HP"

[node name="StaminaLabel" type="Label" parent="StatsBox/StatContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "1/2 STM"

[node name="StrengthLabel" type="Label" parent="StatsBox/StatContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "2 STR"

[node name="EnduranceLabel" type="Label" parent="StatsBox/StatContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "2 END"

[node name="EXPLabel" type="Label" parent="StatsBox/StatContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "0/EXP"

[node name="StatImgs" type="VBoxContainer" parent="StatsBox"]
layout_mode = 0
offset_left = 113.0
offset_top = 124.0
offset_right = 153.0
offset_bottom = 340.0

[node name="HP" type="TextureRect" parent="StatsBox/StatImgs"]
layout_mode = 2
texture = ExtResource("4_2puoj")
expand_mode = 4

[node name="STAM" type="TextureRect" parent="StatsBox/StatImgs"]
layout_mode = 2
texture = ExtResource("5_lfndc")
expand_mode = 4

[node name="STR" type="TextureRect" parent="StatsBox/StatImgs"]
layout_mode = 2
texture = ExtResource("6_jen4e")
expand_mode = 4

[node name="END" type="TextureRect" parent="StatsBox/StatImgs"]
layout_mode = 2
texture = ExtResource("7_s4u07")
expand_mode = 4

[node name="EXP" type="TextureRect" parent="StatsBox/StatImgs"]
layout_mode = 2
texture = ExtResource("8_2q4hs")
expand_mode = 4

[node name="SceneRoot" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_j3fe4")
volume_db = 4.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -5
layout_mode = 0
offset_right = 1148.0
offset_bottom = 644.0
mouse_filter = 2
texture = SubResource("AnimatedTexture_pm2c5")
stretch_mode = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = 621.0
offset_right = 81.0
offset_bottom = 656.0
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "v0.91"
